<?xml version="1.0" encoding="utf-8"?>
<LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/balance_color"
    >

<LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.58">
           <TextView
            android:id="@+id/balance_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginTop="@dimen/balance_margin"
            android:background="@color/balance_color"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:paddingTop="@dimen/top_padding"
            android:text="@string/balance_text"
            android:textColor="@color/text_color"/>
<Button
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.74"
    android:layout_margin="@dimen/view1_margin"
    android:backgroundTint="@color/empty1_color"/>

</LinearLayout>
<LinearLayout
    android:id="@+id/layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.58"
    >
        <TextView
            android:id="@+id/interest_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.37"
            android:layout_marginTop="@dimen/balance_margin"
            android:background="@color/interest_color"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/interest_right_padding"
            android:paddingTop="@dimen/top_padding"
            android:text="@string/interest_text"
            android:textColor="@color/text_color" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.55"
        android:layout_margin="@dimen/view2_margin"
        android:backgroundTint="@color/empty1_color"
        />
</LinearLayout>
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.58">
        <TextView
            android:id="@id/paid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginTop="@dimen/balance_margin"
            android:background="@color/paid_color"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:paddingTop="@dimen/top_padding"
            android:text="@string/paid_text"
            android:textColor="@color/text_color" />
        <Button
            android:id="@+id/empty_view3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.74"
            android:layout_margin="@dimen/view3_margin"
            android:backgroundTint="@color/empty1_color"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.58">
        <TextView
            android:id="@+id/final_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginTop="@dimen/balance_margin"
            android:text="@string/final_text"
            android:textColor="@color/text_color"
            android:background="@color/final_color"
            android:paddingTop="@dimen/top_padding"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.74"
            android:layout_margin="@dimen/view5_margin"
            android:backgroundTint="@color/empty1_color"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.58">

        <TextView
            android:id="@id/months_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginTop="@dimen/balance_margin"
            android:background="@color/months_color"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:paddingTop="@dimen/top_padding"
            android:text="@string/months_text"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/empty_view5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:layout_margin="@dimen/view6_margin"
            android:backgroundTint="@color/empty1_color"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.58">
    <TextView
        android:id="@id/payment_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:layout_marginTop="@dimen/balance_margin"
        android:text="@string/payment_text"
        android:background="@color/payment_color"
        android:textColor="@color/text_color"
        android:paddingTop="@dimen/top_padding"
        android:paddingBottom="@dimen/bottom_padding"
        android:paddingLeft="@dimen/left_padding"
        android:paddingRight="@dimen/right_padding"/>
    <Button
        android:id="@id/empty_view6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.74"
        android:layout_margin="@dimen/payment_margin"
        android:backgroundTint="@color/empty1_color"
        />
</LinearLayout>
    <LinearLayout
        android:id="@+id/layout7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.58">
        <TextView
            android:id="@id/compute_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/compute_text"
            android:textColor="@color/compute_text_color"
            android:background="@color/compute_color"
            android:gravity="center"
            android:textSize="@dimen/compute_size"
            android:layout_margin="@dimen/compute_margin"
            android:paddingTop="@dimen/top_padding"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:layout_weight="0.55"
            android:layout_marginTop="@dimen/compute_top_margin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.58"
        >
        <TextView
            android:id="@+id/clear_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.55"
            android:text="@string/clear_text"
            android:textColor="@color/clear_text_color"
            android:background="@color/clear_color"
            android:gravity="center"
            android:layout_margin="@dimen/clear_margin"
            android:paddingTop="@dimen/top_padding"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding" />
    </LinearLayout>

</LinearLayout>