<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:background="@color/balance_color">

    <TextView
        android:id="@+id/balance_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/balance_color"
        android:text="@string/balance_text"
        android:textSize="@dimen/balance_size"
        android:textColor="@color/text_color"
        android:paddingTop="@dimen/top_padding"
        android:paddingBottom="@dimen/bottom_padding"
        android:paddingLeft="@dimen/left_padding"
        android:paddingRight="@dimen/right_padding"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/final_margin"
        android:layout_marginBottom="@dimen/final_margin"
        android:layout_toStartOf="@+id/empty_view2"
        android:layout_toLeftOf="@+id/empty_view2" />
    <TextView
        android:id="@+id/empty_view1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/empty1_color"
        android:paddingTop="@dimen/top_padding"
        android:paddingBottom="@dimen/bottom_padding"
        android:paddingLeft="@dimen/left_padding"
        android:paddingRight="@dimen/right_padding"
        android:layout_alignLeft="@+id/empty_view2"
        android:layout_alignStart="@+id/empty_view2"
        android:layout_alignRight="@+id/empty_view2"
        android:layout_alignEnd="@+id/empty_view2"
        android:layout_alignBottom="@+id/balance_view"
        android:layout_alignTop="@+id/balance_view" />
    <TextView
        android:id="@+id/interest_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/balance_view"
        android:text="@string/interest_text"
        android:textSize="@dimen/interest_size"
        android:textColor="@color/text_color"
        android:background="@color/balance_color"
        android:paddingTop="@dimen/top_padding"
        android:paddingBottom="@dimen/bottom_padding"
        android:paddingLeft="@dimen/left_padding"
        android:paddingRight="@dimen/right_padding"
        android:layout_marginTop="@dimen/final_margin"
        android:layout_marginBottom="@dimen/final_margin"/>
    <TextView
        android:id="@+id/empty_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/empty2_color"
        android:paddingTop="@dimen/top_padding"
        android:paddingBottom="@dimen/bottom_padding"
        android:paddingLeft="@dimen/left_padding"
        android:paddingRight="@dimen/right_padding"
        android:layout_toRightOf="@id/interest_view"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/view2_margin"
        android:layout_marginRight="@dimen/view2_margin"
        android:layout_alignTop="@+id/interest_view"
        android:layout_alignBottom="@+id/interest_view" />
    <TextView
        android:id="@id/payment_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_text"
        android:textSize="@dimen/payment_size"
        android:textColor="@color/text_color"
        android:background="@color/payment_color"
        android:paddingTop="@dimen/top_padding"
        android:paddingBottom="@dimen/bottom_padding"
        android:paddingLeft="@dimen/left_padding"
        android:paddingRight="@dimen/right_padding"
        android:layout_below="@id/interest_view"
        android:layout_toLeftOf="@+id/empty_view2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/final_margin"
        android:layout_marginBottom="@dimen/final_margin"/>


    <TextView
        android:id="@+id/empty_view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/empty3_color"
        android:paddingTop="@dimen/top_padding"
        android:paddingBottom="@dimen/bottom_padding"
        android:paddingLeft="@dimen/left_padding"
        android:paddingRight="@dimen/right_padding"
        android:layout_alignTop="@+id/payment_view"
        android:layout_alignBottom="@+id/payment_view"
        android:layout_alignLeft="@+id/empty_view2"
        android:layout_alignStart="@+id/empty_view2"
        android:layout_alignRight="@+id/empty_view2"
        android:layout_alignEnd="@+id/empty_view2"></TextView>

    <TextView
        android:id="@+id/final_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_text"
        android:textSize="@dimen/final_size"
        android:textColor="@color/text_color"
        android:background="@color/final_color"
        android:paddingTop="@dimen/top_padding"
        android:paddingBottom="@dimen/bottom_padding"
        android:paddingLeft="@dimen/left_padding"
        android:paddingRight="@dimen/right_padding"

        android:layout_below="@+id/payment_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/final_margin"
        android:layout_marginBottom="@dimen/final_margin"
        android:layout_alignRight="@+id/payment_view"
        android:layout_alignEnd="@+id/payment_view" />
     <TextView
         android:id="@+id/empty_view4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/empty4_color"
         android:paddingTop="@dimen/top_padding"
         android:paddingBottom="@dimen/bottom_padding"
         android:paddingLeft="@dimen/left_padding"
         android:paddingRight="@dimen/right_padding"
         android:layout_alignBottom="@+id/final_view"
         android:layout_alignTop="@+id/final_view"
         android:layout_alignLeft="@+id/empty_view3"
         android:layout_alignStart="@+id/empty_view3"
         android:layout_alignRight="@+id/empty_view3"
         android:layout_alignEnd="@+id/empty_view3"></TextView>
     <TextView
         android:id="@+id/months_view"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/months_text"
         android:textColor="@color/text_color"
         android:textSize="@dimen/months_size"
         android:background="@color/months_color"
         android:paddingTop="@dimen/top_padding"
         android:paddingBottom="@dimen/bottom_padding"
         android:paddingLeft="@dimen/left_padding"
         android:paddingRight="@dimen/right_padding"
         android:layout_below="@id/final_view"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="@dimen/final_margin"
         android:layout_marginBottom="@dimen/final_margin"
         android:layout_alignRight="@+id/final_view"
         android:layout_alignEnd="@+id/final_view" />
     <TextView
         android:id="@+id/empty_view5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/empty5_color"
         android:paddingTop="@dimen/top_padding"
         android:paddingBottom="@dimen/bottom_padding"
         android:paddingLeft="@dimen/left_padding"
         android:paddingRight="@dimen/right_padding"
         android:layout_alignBottom="@+id/months_view"
         android:layout_alignTop="@+id/months_view"
         android:layout_alignLeft="@+id/empty_view4"
         android:layout_alignStart="@+id/empty_view4"
         android:layout_alignRight="@+id/empty_view4"
         android:layout_alignEnd="@+id/empty_view4" />
    <TextView
        android:id="@+id/paid_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/paid_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/paid_size"
        android:background="@color/paid_color"
        android:paddingTop="@dimen/top_padding"
        android:paddingBottom="@dimen/bottom_padding"
        android:paddingLeft="@dimen/left_padding"
        android:paddingRight="@dimen/right_padding"
        android:layout_below="@id/months_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/final_margin"
        android:layout_marginBottom="@dimen/final_margin"
        android:layout_alignRight="@+id/months_view"
        android:layout_alignEnd="@+id/months_view" />
    <TextView
        android:id="@+id/empty_view6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/empty6_color"
        android:paddingTop="@dimen/top_padding"
        android:paddingBottom="@dimen/bottom_padding"
        android:paddingLeft="@dimen/left_padding"
        android:paddingRight="@dimen/right_padding"
        android:layout_alignBottom="@+id/paid_view"
        android:layout_alignTop="@+id/paid_view"
        android:layout_alignLeft="@+id/empty_view4"
        android:layout_alignStart="@+id/empty_view4"
        android:layout_alignRight="@+id/empty_view5"
        android:layout_alignEnd="@+id/empty_view5" />


    <TextView
         android:id="@+id/compute_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/compute_text"
         android:textColor="@color/compute_text_color"
         android:textSize="@dimen/compute_size"
         android:background="@color/compute_color"
         android:gravity="center"
         android:paddingTop="@dimen/top_padding"
         android:paddingBottom="@dimen/bottom_padding"
         android:paddingLeft="@dimen/left_padding"
         android:paddingRight="@dimen/right_padding"
         android:layout_above="@+id/clear_view"
         android:layout_marginTop="@dimen/final_margin"
         android:layout_marginBottom="@dimen/final_margin"
         android:layout_marginLeft="@dimen/final_margin"
         android:layout_marginRight="@dimen/final_margin"
        />
     <TextView
         android:id="@+id/clear_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/clear_text"
         android:textColor="@color/clear_text_color"
         android:textSize="@dimen/clear_size"
         android:background="@color/clear_color"
         android:gravity="center"
         android:paddingTop="@dimen/top_padding"
         android:paddingBottom="@dimen/bottom_padding"
         android:paddingLeft="@dimen/left_padding"
         android:paddingRight="@dimen/right_padding"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="@dimen/final_margin"
         android:layout_marginBottom="@dimen/final_margin"
         android:layout_marginRight="@dimen/final_margin"
         android:layout_marginLeft="@dimen/final_margin"
         />

</RelativeLayout>
